# gk

./: .gitignore  .gitmodules  README.md  gk.jscope
Firmware/: CMakeLists.txt  STM32H747BIx_FLASH.ld  ST_STM32H747_M7_TraceBuffer.pex  gdbtrace.gdb  gdbtrace.init  gk.jdebug  gkm4.jdebug  gkv3.jdebug  interpret-profile.R  interpret-profile.sh  stm32h7s7xx_flash.ld
Firmware-v3/: CMakeLists.txt  ST_STM32H7S7L8_TracePins.pex  gkv3.jdebug  interpret-profile.sh  stm32h7s7xx_flash.ld  usbd.c
Firmware-v3/inc/: SEGGER_RTT.h  SEGGER_RTT_Conf.h  buddy.h  buttons.h  clocks.h  fs_provision.h  gk_conf.h  gpu.h  i2c.h  lru_cache.h  mpuregions.h  osfile.h  osmutex.h  osnet.h  osnet_dhcp.h  osqueue.h  ostypes.h  pins.h  pipe.h  process.h  profile.h  pwr.h  region_allocator.h  scheduler.h  screen.h  sd.h  sound.h  sync_primitive_locks.h  syscalls_int.h  thread.h  tilt.h  tusb_config.h  usb.h  util.h
Firmware-v3/src/: SEGGER_RTT.c  SEGGER_RTT_printf.c  btnled.cpp  buttons.cpp  cache.cpp  cleanup.cpp  clocks.cpp  ctp.cpp  elf.cpp  ext4.cpp  ext4_cache_malloc.cpp  fatfsfile.cpp  faults.cpp  fs_provision.cpp  gamepad.cpp  gpu.cpp  i2c_poll.cpp  i2c_task.cpp  i2c_test.cpp  init_thread.cpp  lib.cpp  logger.cpp  lsm_driver.cpp  main.cpp  memblk.cpp  mpuregions.cpp  mutex.cpp  nema.cpp  nematest.cpp  net_arp.cpp  net_dhcpc.cpp  net_dhcpd.cpp  net_ethernet.cpp  net_icmp.cpp  net_pbuf.cpp  net_server.cpp  net_socket.cpp  net_tcp.cpp  net_telnet.cpp  net_wifi.cpp  (+32 more)
Firmware-v3/src/supervisor/: brightness.h  custom_osd.cpp  supervisor.cpp
Firmware-v3/xspi_flasher/: CMakeLists.txt  FlashDev.c  FlashPrg.cpp  stm32h7s7xx_flash-xspi-flasher.ld
Firmware-v4/Infineon_AIROC-Wi-Fi-Bluetooth-STM32_1.7.1/: CMakeLists.txt  Infineon.AIROC-Wi-Fi-Bluetooth-STM32.1.7.1.pack.REMOVED.git-id
Firmware-v4/cm33-firmware/: CMakeLists.txt  cm33.jdebug  cm33.jflash  stm32mp2_cm33.ld
Firmware-v4/cm33-firmware/inc/: FreeRTOSConfig.h  adc.h  clocks.h  ctp.h  debounce.h  guard.h  i2c.h  lsm.h  message.h
Firmware-v4/cm33-firmware/src/: adc.cpp  clocks.cpp  ctp.cpp  guard.cpp  i2c.cpp  klog.cpp  lsm_driver.cpp  main.cpp  pins.cpp  startup.s
Firmware-v4/fsbl-a/: CMakeLists.txt  fsbl-a.jdebug  fsbl-a.jflash  stm32mp2_fsbla.ld
Firmware-v4/fsbl-a/src/: clocks.cpp  main.cpp  startup.s
Firmware-v4/gkos/: CMakeLists.txt  gkos.jdebug  gkos.jflash  gkos.ld  revert.changes.diff
Firmware-v4/gkos/gkos_flash/: gkos_flash.s
Firmware-v4/gkos/inc/: block_allocator.h  block_dev.h  bootinfo.h  btnled.h  buddy.h  cache.h  cleanup.h  clocks.h  cm33_interface.h  coalescing_block_allocator.h  completion_list.h  cpu.h  cpu_a35.h  ctp.h  cyabs_rtos_impl.h  cybsp.h  drifile.h  drm.h  drm_device.h  drm_ioctl.h  drm_scheduler.h  elf.h  etnaviv.h  ext4_thread.h  fatfs_file.h  fencefile.h  gic.h  gic_irq_nos.h  gk_conf.h  gk_tf_a_defs.h  i2c.h  ipi.h  kernel_time.h  kheap.h  klog_buffer.h  klog_file.h  linux_types.h  lockfreebuffer.h  logger.h  mbr.h  (+43 more)
Firmware-v4/gkos/src/: barrier.cpp  block_device.cpp  btnled.cpp  cache.cpp  cleanup.cpp  clocks.cpp  cm33_interface.cpp  condition.cpp  cpu_a35.cpp  ctp.cpp  dma_alloc.cpp  dma_resv.cpp  dmabuffile.cpp  dri_ioctl.cpp  drifile.cpp  drm_scheduler.cpp  elf.cpp  etnaviv.cpp  exceptions.cpp  ext4.cpp  ext4_messages.cpp  fatfs_file.cpp  fencefile.cpp  file.cpp  fs_provision.cpp  gic.cpp  i2c.cpp  init_thread.cpp  input_event.cpp  kernel_time.cpp  kheap.cpp  klog_buffer.cpp  klog_file.cpp  lockfreebuffer.cpp  logger.cpp  logger_printf.cpp  lwextfile.cpp  main.cpp  mbr.cpp  memchk.cpp  (+82 more)
Firmware-v4/ospi_flasher/: CMakeLists.txt  FlashDev.cpp  FlashOS.h  FlashPrg.cpp  STM32MP255_QSPI.xml  stm32mp2-ospi-flasher.ld  w25.h
Firmware-v4/secure_monitor/: CMakeLists.txt  gkos_sm.jdebug  gkos_sm.jflash  gkos_sm.ld
Firmware-v4/secure_monitor/inc/: ap.h  gic.h  sm_clocks.h  smc.h  vblock.h
Firmware-v4/secure_monitor/src/: clocks.cpp  exceptions.cpp  gic.cpp  main.cpp  pmic.cpp  smc.cpp  startup.s  strlen.cpp  vblock.cpp  vmem.cpp  vmem_el1.cpp  vmem_el3.cpp  vtors.s
Firmware-v4/ssbl-testing/: CMakeLists.txt  README  ssbl-testing.jdebug  ssbl-testing.jflash  stm32mp2_ssbla.ld
Firmware-v4/ssbl-testing/inc/: clocks.h  cyabs_rtos_impl.h  cycfg_system.h  cyhal_hw_types.h  gslX680_311_5_F.h  i2c.h  osmutex.h  pmic.h  screen.h  sdif.h
Firmware-v4/ssbl-testing/src/: bt_iface.cpp  cache_inv.s  clocks.cpp  ctp.cpp  gic.cpp  i2c.cpp  lsm_driver.cpp  main.cpp  pwr.cpp  screen.cpp  sdif.cpp  smc_power.cpp  startup.s  sunplus_gslX680.c  vmem.cpp  vtors.s  wifi_airoc.cpp  wifi_airoc_buffer.cpp  wifi_airoc_rtos.cpp  wifi_airoc_sdio.cpp
Firmware/cmake/: toolchain.cmake
Firmware/doc/: elf.md  gkos.md  gpu.md  memory.md  net.md  provisioning.md  scheduler.md  sync.md  vfs.md
Firmware/gkos-core/: CMakeLists.txt
Firmware/inc/: FreeRTOSConfig.h  LSM6DSL_ACC_GYRO_Driver.h  SEGGER_RTT.h  SEGGER_RTT_Conf.h  btnled.h  buddy.h  cache.h  cleanup.h  clocks.h  conf_winc.h  debounce.h  dhserver.h  elf.h  ext4_thread.h  fmc.h  gk_conf.h  gk_file.h  gpu.h  i2c.h  ipi.h  logger.h  lv_conf.h  lv_gk_os.h  lwipopts.h  mdma.h  memblk.h  memblk_types.h  mpuregions.h  osallocator.h  osevent.h  osfile.h  osmutex.h  osnet.h  osqueue.h  osringbuffer.h  ossharedmem.h  ostypes.h  pins.h  process.h  pwr.h  (+18 more)
Firmware/src/: SEGGER_RTT_printf.c  btnled.cpp  buttons.cpp  cache.cpp  cleanup.cpp  clocks.cpp  ctp_driver.cpp  dhserver.cpp  dlmalloc.h  elf.cpp  ext4.cpp  ext4_cache_malloc.cpp  fatfsfile.cpp  faults.cpp  file.cpp  fmc.cpp  fs_provision.cpp  gamepad.cpp  gpu.cpp  i2c_devices.cpp  i2c_poll.cpp  i2c_task.cpp  init_thread.cpp  ipi.cpp  jpeg.cpp  kernel_time.cpp  lib.cpp  logger.cpp  lsm_driver.cpp  lwextfile.cpp  lwip_osal.cpp  main.cpp  malloc-sram4.cpp  malloc_wrapper.cpp  max_driver.cpp  mdma.cpp  memblk.cpp  memcpy_split.cpp  mpu.cpp  mutex.cpp  (+52 more)
Firmware/winc1500/: WINC1500_IoT_SW_APIs.chm
Firmware/xspi_flasher/: FlashDev.c  FlashOS.h
Firmware/zlib-1.3.1/: gzguts.h  gzread.c  gzwrite.c  zutil.c
gk-jlink-rtos/: CMakeLists.txt
gk-jlink-rtos/inc/: rtos-plugin.h
gk-jlink-rtos/src/: gk-ozone-rtos.js  gkv4-ozone-rtos.js  main.cpp
(+583 files in other folders)
